feat: add CriteriosDesempateResponseDTO to GrupoResponseDTO